syntax = "proto3";

package spark;

import "spark/spark.proto";

option java_package = "me.lucko.spark.proto";
option java_outer_classname = "SparkHeapProtos";

message HeapData {
  HeapMetadata metadata = 1;
  repeated HeapEntry entries = 2;
}

message HeapMetadata {
  CommandSenderMetadata creator = 1;
  PlatformMetadata platform_metadata = 2;
  PlatformStatistics platform_statistics = 3;
  SystemStatistics system_statistics = 4;
  int64 generated_time = 5;
  map<string, string> server_configurations = 6;
  map<string, PluginOrModMetadata> sources = 7;
  map<string, string> extra_platform_metadata = 8;
}

message HeapEntry {
  int32 order = 1;
  int32 instances = 2;
  int64 size = 3;
  string type = 4;
}
